# kubemerge

./: Cargo.toml  LICENSE  README.md  merge-kubeconfig.sh
.cargo/: config.toml
.github/workflows/: build-binaries.yaml
src/: config.rs  main.rs  merge.rs  utils.rs
