[package]
name = "kubemerge"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive", "string"] }
chrono = "0.4.41"
serde = { version = "1.0.219", features = ["derive"] }
serde_yml = "0.0.12"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
